# FeatherNotes

./: CMakeLists.txt  ChangeLog  INSTALL  NEWS  README  README.md  README_OS2.md  fn.pro
cmake/Modules/: FindHUNSPELL.cmake
feathernotes/: CMakeLists.txt  about.ui  colorLabel.cpp  colorLabel.h  domitem.cpp  domitem.h  dommodel.cpp  dommodel.h  feathernotes.pro  filedialog.h  find.cpp  fn.cpp  fn.h  fn.ui  help.h  helpDialog.ui  lineedit.cpp  lineedit.h  main.cpp  messagebox.h  org.feathernotes.Application.xml  predDialog.ui  pref.cpp  pref.h  prefDialog.ui  printing.cpp  printing.h  settings.h  signalDaemon.cpp  signalDaemon.h  simplecrypt.cpp  simplecrypt.h  singleton.cpp  singleton.h  spellChecker.cpp  spellChecker.h  spellDialog.cpp  spellDialog.h  spellDialog.ui  spinbox.h  (+11 more)
feathernotes/data/: feathernotes.desktop  feathernotes.icns  feathernotes.metainfo.xml  feathernotes.xml  feathernotes_os2.rc  fn.qrc
feathernotes/data/translations/: feathernotes.ts  feathernotes_ar_DZ.ts  feathernotes_az.ts  feathernotes_be.ts  feathernotes_bg.ts  feathernotes_ca.ts  feathernotes_cs.ts  feathernotes_cy.ts  feathernotes_da.ts  feathernotes_de.ts  feathernotes_el.ts  feathernotes_en.ts  feathernotes_en_GB.ts  feathernotes_eo.ts  feathernotes_es.ts  feathernotes_et.ts  feathernotes_fa.ts  feathernotes_fi.ts  feathernotes_fr.ts  feathernotes_he.ts  feathernotes_hr.ts  feathernotes_hu.ts  feathernotes_id.ts  feathernotes_it.ts  feathernotes_ja.ts  feathernotes_ka.ts  feathernotes_kab.ts  feathernotes_ko.ts  feathernotes_lt.ts  feathernotes_nb_NO.ts  feathernotes_nl.ts  feathernotes_pl.ts  feathernotes_pt.ts  feathernotes_pt_BR.ts  feathernotes_pt_PT.ts  feathernotes_ru.ts  feathernotes_si.ts  feathernotes_sk_SK.ts  feathernotes_sl.ts  feathernotes_sv.ts  (+5 more)
